--- a/app/src/main/res/layout/activity_login_user.xml
+++ b/app/src/main/res/layout/activity_login_user.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.user.LoginUser">
+    tools:context=".user.LoginUser">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -29,7 +29,9 @@
             android:id="@+id/textView10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/nunito_semibold"
             android:text="@string/Tagline1"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView7" />
@@ -38,7 +40,9 @@
             android:id="@+id/textView11"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/nunito_semibold"
             android:text="@string/Tagline2"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView10" />
@@ -55,6 +59,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="44dp"
+            android:fontFamily="@font/mulish_extrabold"
             android:text="@string/logintext"
             android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@+id/guideline"
@@ -67,6 +72,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
+            android:fontFamily="@font/mulish_light"
             android:text="@string/logintextsub"
             android:textSize="16sp"
             app:layout_constraintBottom_toTopOf="@+id/guideline"
@@ -133,12 +139,26 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />
 
+                <ImageView
+                    android:id="@+id/togglePasswordVisibility"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="40dp"
+                    android:src="@drawable/ic_eye"
+                    android:contentDescription="@string/toggle_password_visibility"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/editTextPassword"
+                    app:layout_constraintBottom_toBottomOf="@id/editTextPassword"
+                    android:padding="8dp"
+                    android:clickable="true"
+                    android:focusable="true" />
+
                 <Button
                     android:id="@+id/Login"
                     android:layout_width="0dp"
                     android:layout_height="60dp"
-                    android:layout_marginStart="128dp"
-                    android:layout_marginEnd="128dp"
+                    android:layout_marginStart="64dp"
+                    android:layout_marginEnd="64dp"
                     android:backgroundTint="#17b8ad"
                     android:drawableTint="#FFFFFF"
                     android:text="@string/LoginButton"
