--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="app_theme_light">#f6fbff</color>
     <color name="edit_text_background">#f6fbff</color>
     <color name="edit_text_border">#17b8ad</color>
+
+    <color name="colorPrimary">#17b8ad</color>
+    <color name="colorPrimaryDark">#17b8ad</color>
+    <color name="colorAccent">#FF4081</color>
 </resources>
