--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,25 +5,13 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+
+        <item name="android:textColor">@color/textColorDarkMode</item>
     </style>
 
     <style name="Theme.SightSafe" parent="Base.Theme.SightSafe" />
 
-    <style name="Theme.App.SplashScreen" parent="Theme.SplashScreen">
-        <item name="windowSplashScreenBackground">@color/white</item>
-        <item name="windowSplashScreenAnimatedIcon">@drawable/sight_safe</item>
-        <item name="postSplashScreenTheme">@style/Base.Theme.SightSafe</item>
-    </style>
 
-    <style name="custom_card_view_style" parent="Widget.MaterialComponents.CardView">
-        <item name="shapeAppearanceOverlay">@style/custom_card_view</item>
-    </style>
 
-    <style name="custom_card_view" parent="">
-        <item name="cornerFamily">rounded</item>
-        <item name="cornerSizeTopRight">48dp</item>
-        <item name="cornerSizeTopLeft">48dp</item>
-        <item name="cornerSizeBottomLeft">0dp</item>
-        <item name="cornerSizeBottomRight">0dp</item>
-    </style>
+
 </resources>
